objects/PC_Support_Plan_Automation_Task__mdt.object
<CustomObject>
    <fields>
        <fullName>PC_ActionClass__c</fullName>
        <label>Action Class</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_LightningComponent__c</fullName>
        <label>Lightning Component</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SourceObjectAPIName__c</fullName>
        <description>API name of the object based on which the Support Plan Automation Task needs to run.</description>
        <inlineHelpText>If left blank, the automation task will be assumed to be valid for all objects.
Specify the API name without the namespace.</inlineHelpText>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SourceObjectNamespace__c</fullName>
        <description>Namespace of the object specified in Source Object field.</description>
        <inlineHelpText>Namespace of the object specified in Source Object field.</inlineHelpText>
        <label>Source Object Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Support Plan Automation Task</label>
    <pluralLabel>Support Plan Automation Tasks</pluralLabel>
</CustomObject>